# xia_fmri_workflow

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
xia_fmri_workflow/: __init__.py  check_spmDotMat.py
