[tool.poetry]
name = "xia-fmri-workflow"
version = "0.1.0"
description = ""
authors = ["Xiaokai Xia <dddd1007@gmail.com>"]
readme = "README.md"
packages = [{include = "xia-fmri-workflow"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
